src/index.css
@import 'tailwindcss';

@theme {
	--color-background: #f8f7f4;
	--color-primary: #2f3e46;
	--color-accent: #84a98c;
	--color-accent2: #e5989b;
	--color-text: #1b1b1b;
	--color-card: #ffffff;
}

:root {
	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
}

html {
	scroll-behavior: smooth;
}

body {
	margin: auto;
}

@layer components {
	.recipe-pill {
		@apply rounded-full border py-1 px-3 lg:text-lg bg-accent hover:bg-accent2 border-accent text-white;
	}

  .tag-pill {
    @apply rounded-full border border-gray-500 px-3 py-1 text-xs sm:text-sm lg:text-base shadow-sm transition  
  }

	#search-input {
		@apply rounded-full border py-0.5 px-3 border-accent focus:outline-none focus-visible:ring-1 focus-visible:ring-accent focus-visible:border-accent;
	}

	.dropdown {
		@apply rounded-full border py-0.5 px-2 border-accent focus:outline-none focus-visible:ring-1 focus-visible:ring-accent focus-visible:border-accent;
	}
}

